--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <body>
         <main>
             <header>
-                <img src="./anh3.jpg" alt="">
+                <img src="./picture/anh3.jpg" alt="">
                 <h1>Nguyen Khao</h1>
             </header>
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/khao.nguyen.315"> <img src="./facebook.webp " style="width: 30px; height: 30px; padding-bottom: 10px;" alt=""> Facebook</a>
+                    <a href="https://www.facebook.com/khao.nguyen.315"> <img src="./picture/facebook.webp " style="width: 30px; height: 30px; padding-bottom: 10px;" alt=""> Facebook</a>
                 </li>
                 <li>
-                    <a href="https://www.tiktok.com/@k4.flochaokid?is_from_webapp=1&sender_device=pc"> <img src="./tiktok.png" style="width: 30px; height: 30px;  padding-bottom: 10px;" alt=""> Tiktok</a>
+                    <a href="https://www.tiktok.com/@k4.flochaokid?is_from_webapp=1&sender_device=pc"> <img src="./picture/tiktok.png" style="width: 30px; height: 30px;  padding-bottom: 10px;" alt=""> Tiktok</a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCDHCPseRzAVT2jLUxQrgzSA"> <img src="./youtube.png" style="width: 30px; height: 30px;  padding-bottom: 10px;" alt=""> Youtube</a>
+                    <a href="https://www.youtube.com/channel/UCDHCPseRzAVT2jLUxQrgzSA"> <img src="./picture/youtube.png" style="width: 30px; height: 30px;  padding-bottom: 10px;" alt=""> Youtube</a>
                 </li>
             </ul>
         </main>
