--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>gioi thieu</title>
         <meta charset="utf-8">
-        <meta name="viewpoint" content="width-device-width, initial-scale-1">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
